# mlcartifact

./: .dockerignore  .gitignore  .goreleaser.yml  Dockerfile  Makefile  README.de.md  README.md  TODO.md  Taskfile.yml  client.go  client_test.go  docker-compose.yml  go.mod  go.sum
.mlcai/: DOC_TODO.md  INTEGRATION.md  TECH_STACK.md  WORKLOG.md
.task/checksum/: build-cli  build-server
client/: client.go  client_test.go
client-python/: README.md  example.py  pyproject.toml
client-python/mlcartifact/: __init__.py  client.py
client-rust/: Cargo.toml  README.md  build.rs
client-rust/examples/: basic.rs
client-rust/src/: lib.rs
client-ts/: README.de.md  README.md  package-lock.json  package.json  tsconfig.json
client-ts/examples/: example.ts
client-ts/src/: client.test.ts  client.ts  index.ts  options.ts
cmd/artifact-cli/: main.go
cmd/cli/: go.mod  go.sum
cmd/cli/cmd/artifact-cli/: main.go
cmd/server/: .gitignore  Makefile  README.de.md  README.md  README_DE.md  go.mod  go.sum  main.go
cmd/server/cmd/testclient/: main.go
cmd/server/internal/grpc/: connect_server.go  server.go  (+1 more)
cmd/server/scripts/: test_sse.sh
docs/: go_library.md  grpc_messaging.md  vfs_project_plan.md
examples/: .gitignore
examples/go/: main.go
internal/grpc/: connect_server.go  server.go  server_test.go
internal/mcp/: artifacts.go
internal/storage/: store.go  store_test.go  vfs_exhaustive_test.go
mlcprodweb/: de.md  en.md  meta.yaml
proto/: artifact.pb.go  artifact.proto  artifact_grpc.pb.go
proto/protoconnect/: artifact.connect.go
scripts/: install.sh
(+3 files in other folders)
