[package]
name = "mlcartifact"
version = "0.3.1"
edition = "2021"
description = "Rust client for mlcartifact service"
license = "MIT"
authors = ["Michael Lechner"]

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["full"] }
http = "1.1"

[build-dependencies]
tonic-build = "0.12"
